[tool.poetry]
name = "thumbor-expire"
version = "0.1.1"
description = "Add timeout verification for thumbor"
authors = ["HonQii <honqi3014@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/HonQii/thumbor-expire.git"

keywords = ["thumbor", "expire"]

[tool.poetry.dependencies]
python = "^2 || ^3.5"

libthumbor = [
    {version = "^1.3.2", python = "~2"},
    {version = "^2.0.1", python = ">=3.6"}
]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
